# Bi-Pedal-Wheeled-Robot

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/bpwr/share/ament_index/resource_index/package_run_dependencies/: bpwr
install/bpwr/share/ament_index/resource_index/parent_prefix_path/: bpwr
install/bpwr/share/bpwr/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bpwr/share/bpwr/cmake/: bpwrConfig-version.cmake  bpwrConfig.cmake
install/bpwr/share/bpwr/config/: empty.yaml
install/bpwr/share/bpwr/description/: robot.urdf.xacro
install/bpwr/share/bpwr/environment/: ament_prefix_path.dsv  path.dsv
install/bpwr/share/bpwr/launch/: rsp.launch.py
install/bpwr/share/bpwr/worlds/: empty.world
log/: latest_build  latest_list
src/balance_controller/: CMakeLists.txt  package.xml  plugin.xml
src/balance_controller/include/balance_controller/: balance_controller.hpp
src/balance_controller/src/: balance_controller.cpp
src/my_bot/: CMakeLists.txt  package.xml
src/my_bot/config/: controllers.yaml
src/my_bot/description/: camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/my_bot/description/meshes/: Hip_L.STL  Hip_R.STL  Shin_L.STL  Shin_R.STL  Waist.STL  Wheel_L.STL  Wheel_R.STL
src/my_bot/launch/: balance_node.launch.py  gazebo_sim.launch.py  rsp.launch.py  rviz_start.launch.py
